added user authetification and button logic to login and signup pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-    "name": "your-project-name",
+    "name": "travel_log",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
