--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.5.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^18.2.0",
