--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "chai": "^5.0.3",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
