--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.1",
     "framer-motion": "^11.0.3",
     "graphql": "^16.8.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^18.2.0",
