--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^6.22.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
