--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "travel_log",
   "version": "1.0.0",
@@ -16,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "@reach/combobox": "^0.18.0"
   }
 }
