--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.0.3",
     "vite": "^5.0.8"
   }
 }
