--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
