Got data coming into the drawer componenent from the API still quite rough.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "@reach/combobox": "^0.18.0"
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.2"
   }
 }
